--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body{
     height: 100%;
 }
 .menu a:hover{
-    background: #2D5A80;
+    background: #6b6464;
+    background: radial-gradient(circle, rgba(107, 100, 100, 1) 25%, rgba(61, 51, 51, undefined) 52%, rgba(0, 0, 0, 0.84) 84%);
+    opacity: 0.2;
     border-radius: 10%;
 }
