--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
 }
 .menu a:hover{
     background: #6b6464;
-    background: radial-gradient(circle, rgba(107, 100, 100, 1) 25%, rgba(61, 51, 51, undefined) 52%, rgba(0, 0, 0, 0.84) 84%);
-    opacity: 0.2;
+    background: radial-gradient(circle, rgba(107, 100, 100, 0.5) 25%, rgba(61, 51, 51, 0.5) 52%, rgba(0, 0, 0, 0.5) 84%);
     border-radius: 10%;
+    scale: 110%;
 }
